<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtWelcome"
        android:layout_weight="0.14"
        android:textSize="40sp"
        android:textAlignment="center"/>

    <Button
        android:text="@string/war"
        android:onClick="onWarButtonPressed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnWar"
        android:layout_weight="0.08"
        android:textSize="40sp"/>

    <Button
        android:text="@string/blackjack"
        android:onClick="onBlackJackButtonPressed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnBlackJack"
        android:layout_weight="0.08"
        android:textSize="40sp"/>

    <Button
        android:text="@string/poker"
        android:onClick="onPokerButtonPressed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnPoker"
        android:layout_weight="0.08"
        android:textSize="40sp"/>


</LinearLayout>