<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/dealer_card"
        android:textSize="38sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="103dp"
        android:layout_marginEnd="75dp"
        android:id="@+id/txtDealerCard"
        android:gravity="center"
        android:height="300dp"
        android:width="200dp"
        android:layout_marginTop="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/dealer_deck"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="45sp"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="75dp"
        android:id="@+id/txtDealerDeck" />

    <TextView
        android:text="@string/player_card"
        android:textSize="38sp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:id="@+id/txtPlayerCard"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/txtDealerCard"
        android:layout_alignStart="@+id/txtDealerCard" />

    <TextView
        android:text="@string/player_deck"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:textSize="45sp"
        android:id="@+id/txtPlayerDeck"
        android:layout_alignBaseline="@+id/txtPlayerCard"
        android:layout_alignBottom="@+id/txtPlayerCard"
        android:layout_alignLeft="@+id/txtDealerDeck"
        android:layout_alignStart="@+id/txtDealerDeck" />

    <Button
        android:text="@string/deal"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnDealWar"
        android:height="100dp"
        android:width="180dp"/>

    <Button
        android:text="WAR!"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnWar"
        android:height="100dp"
        android:width="180dp"
        android:visibility="invisible"/>

    <!--android:layout_centerVertical="true"-->
        <!--android:layout_centerHorizontal="true"-->

    <Button
        android:text="@string/restart"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnRestart"
        android:height="100dp"
        android:width="220dp"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="100dp"
        android:width="400dp"
        android:id="@+id/txtWinner"
        android:textSize="38sp"
        android:gravity="center"
        android:layout_alignBottom="@+id/btnDealWar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="88dp" />


</RelativeLayout>